--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 <body>
   <canvas id="game-Canvas" width="800" height="600" align="center"></canvas>
   <script>
+   /*Variables*/
     var canvas, canvasContext;
 
     var w = window.innerWidth || document.body.clientWidth;
     var h = window.innerHeight || document.body.clientHeight;
 
+    var framesPerSecond = 30;
+    setInterval(updateAll, 1000/framesPerSecond);
 
+   /*Functions*/
     window.onload = function(){
 
       canvas = document.getElementById('game-Canvas');
@@ -30,8 +34,8 @@
       canvasContext.beginPath();
       canvasContext.arc(100,100, 10, 0,Math.PI*2, true);
       canvasContext.fill();
-
     }
+
   </script>
 
 </body>
