--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <script>
    /*Variables*/
     var canvas, canvasContext;
-    var ballX = 35;
-    var ballY = 35;
     var ballSpeedX = 5;
     var ballSpeedY = 7;
+    var ballX = 65;
+    var ballY = 65;
 
     // var w = window.innerWidth || document.body.clientWidth;
     // var h = window.innerHeight || document.body.clientHeight;
@@ -31,37 +31,43 @@
 
       var framesPerSecond = 30;
       setInterval(updateAll, 1000/framesPerSecond);
-
     }
     function updateAll(){
       move();
       draw();
     }
-    function move(){
-      ballX += ballSpeedX;
-      if(ballX > canvas.width){
-        ballSpeedX *= -1;
+      function move(){
+        ballX += ballSpeedX;
+        if(ballX > canvas.width){
+          ballSpeedX *= -1;
+        }
+        if(ballX < 0){
+          ballSpeedX *= -1;
+        }
+        ballY += ballSpeedY;
+        if(ballY > canvas.height){
+          ballSpeedY *= -1;
+        }
+        if(ballY < 0){
+          ballSpeedY *= -1;
+        }
       }
-      if(ballX < 0){
-        ballSpeedX *= -1;
-      }
-      ballY += ballSpeedY;
-      if(ballY > canvas.height){
-        ballSpeedY *= -1;
-      }
-      if(ballY < 0){
-        ballSpeedY *= -1;
-      }
-    }
     function draw(){
-      canvasContext.fillStyle = "black";
-      canvasContext.fillRect(0,0, canvas.width, canvas.height);
-      canvasContext.fillStyle = "white";
-      canvasContext.beginPath();
-      canvasContext.arc(ballX,ballY, 10, 0,Math.PI*2, true);
-      canvasContext.fill();
-    }
+      fillCanvas("black", 0,0,800,800);
 
+      ball("white", ballX, ballY, 10);
+    }
+      function fillCanvas(colorCanvas, topLeftX, topLeftY, canvasWidth, canvasHeight){
+        canvasContext.fillStyle = colorCanvas;
+        canvasContext.fillRect(topLeftX, topLeftY, canvasWidth, canvasHeight);
+      }
+
+      function ball(colorBall, centerX, centerY, radius){
+        canvasContext.fillStyle = colorBall;
+        canvasContext.beginPath();
+        canvasContext.arc(centerX, centerY, radius, 0*Math.PI, Math.PI*2, true);
+        canvasContext.fill();
+      }
 
 
 
