--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     var ballX = 65;
     var ballY = 65;
 
+    const PADDLE_THICKNESS = 10;
+    const PADDLE_WIDTH = 100;
+    var paddleX = 400;
+
     // var w = window.innerWidth || document.body.clientWidth;
     // var h = window.innerHeight || document.body.clientHeight;
 
    /*Functions*/
-
     window.onload = function(){
 
       canvas = document.getElementById('game-Canvas');
@@ -32,7 +35,15 @@
 
       var framesPerSecond = 30;
       setInterval(updateAll, 1000/framesPerSecond);
+
+      canvas.addEventListener("mousemove", updateMousePos);
     }
+
+    function updateMousePos(evt){
+      var mouseX = evt.clientX;
+      paddleX = mouseX;
+    }
+
     function updateAll(){
       move();
       draw();
@@ -56,19 +67,22 @@
 
     function draw(){
       fillCanvas("black", 0,0,800,800);
-
       ball("white", ballX, ballY, 10);
+      paddle("white");
     }
       function fillCanvas(colorCanvas, topLeftX, topLeftY, canvasWidth, canvasHeight){
         canvasContext.fillStyle = colorCanvas;
         canvasContext.fillRect(topLeftX, topLeftY, canvasWidth, canvasHeight);
       }
-
       function ball(colorBall, centerX, centerY, radius){
         canvasContext.fillStyle = colorBall;
         canvasContext.beginPath();
         canvasContext.arc(centerX, centerY, radius, 0*Math.PI, Math.PI*2, true);
         canvasContext.fill();
+      }
+      function paddle(colorPaddle){
+        canvasContext.fillStyle = colorPaddle;
+        canvasContext.fillRect(paddleX, 0, PADDLE_WIDTH, PADDLE_THICKNESS);
       }
 
   </script>
