--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     const BRICK_THICKNESS = 20;
     const BRICK_WIDTH = 100;
     const BRICK_PADDING = 5;
-	const BRICK_COUNT = 4;
+	const BRICK_COUNT = 8;
 	  
     var paddleX;
     var mouseX;
@@ -66,9 +66,13 @@
 	
 	function brickReset(){
 		for(var i=0; i < BRICK_COUNT; i++){
-			brickGrid[i] = true;
-		}
-	}
+			if (Math.random() < 0.5){
+				brickGrid[i] =  true;		
+			}else{
+				brickGrid[i] = false;
+			}// end of random check
+		}// end of brick count
+	}// end of brickReset
 
     /*canvas move*/
     function move(){
@@ -97,10 +101,8 @@
       var paddleBottomEdgeY = paddleTopEdgeY + PADDLE_THICKNESS;
       var paddleLeftEdgeX = paddleX;
       var paddleRightEdgeX = paddleLeftEdgeX + PADDLE_WIDTH;
-      var bounceBack = -1;
-
-
-
+      
+	  var bounceBack = -1;
       if(ballY > paddleTopEdgeY &&
          ballY < paddleBottomEdgeY &&
          ballX > paddleLeftEdgeX &&
@@ -111,23 +113,6 @@
          var ballDistFromPaddleCenterX = ballX - centerOfPaddleX;
          ballSpeedX = ballDistFromPaddleCenterX * 0.35;
       }
-
-      /*make bricks disappear*/
-
-      var brickBottomEdge = canvas.height - 560;
-      var firstBrickLeftEdge = 0;
-      var firstBrickRightEdge = canvas.width;
-      brickVisible = true;
-
-      if(ballY < brickBottomEdge &&
-          ballX > firstBrickLeftEdge &&
-          ballX < firstBrickRightEdge &&
-          brickVisible  == true){
-            reflectBall(bounceBack);
-            brickVisible = false;
-            console.log(brickVisible);
-       }
-
     }
 
     function resetBall(){
@@ -137,9 +122,7 @@
         ballY = 100;
       }, delay);
     }
-    function noReflectBall(){
-      ballSpeedY *= 1;
-    }
+  
 
     function reflectBall(reflect){
       ballSpeedY *= -1;
@@ -161,13 +144,11 @@
       drawBricks();
     }
 
-
-    function drawBricks(){
-		
+    function drawBricks(){	
 	  for (var i = 0; i <= BRICK_COUNT; i++){
-		  if(brickGrid[i]){
-		  	fillRect('blue',BRICK_WIDTH*i,0,BRICK_WIDTH-2,BRICK_THICKNESS-2);
-		  }
+	  	if(brickGrid[i]){
+			fillRect('blue',BRICK_WIDTH*i,0,BRICK_WIDTH-2,BRICK_THICKNESS-2);
+	  	}	
 	  }  
     }
 
