--- a/index.html
+++ b/index.html
@@ -19,23 +19,36 @@ var ballSpeedX = 5;
 var ballSpeedY = 10;
 var ballX = 50;
 var ballY = 50;
+var mouseX = 0;
+var mouseY = 0;
 
 const PADDLE_THICKNESS = 15;
 const PADDLE_WIDTH = 120;
 const PADDLE_DIST_FROM_EDGE = 60;
-
-const BRICK_THICKNESS = 20;
-const BRICK_WIDTH = 100;
-const BRICK_PADDING = 5;
-const BRICK_COLS = 8;
-const BRICK_GAP = 2;
-const BRICK_ROWS = 4;
-
 var paddleX;
-var mouseX;
-var mouseY;
 
-var brickGrid = new Array(BRICK_COLS);
+const BRICK_WIDTH = 50;
+const BRICK_THICKNESS = 20;
+const BRICK_GAP = 2;	
+const BRICK_COLS = 16;
+const BRICK_ROWS = 7;
+var brickGrid = new Array(BRICK_COLS * BRICK_ROWS);
+
+function updateMousePos(evt){
+  var rect = canvas.getBoundingClientRect();
+  var root = document.documentElement;
+  mouseX = evt.clientX - rect.left - root.scrollLeft;
+  mouseY = evt.clientY - rect.top - root.scrollTop;
+  paddleX = mouseX - PADDLE_WIDTH/2;
+}
+	
+function brickReset(){
+	for(var i=0; i < BRICK_COLS * BRICK_ROWS; i++){
+		brickGrid[i] = true;
+	}// end of brick count
+}// end of brickReset
+/*canvas move*/
+
 
 /*Functions*/
 window.onload = function(){
@@ -52,26 +65,12 @@ window.onload = function(){
   brickReset();
 }
 
-function updateMousePos(evt){
-  var rect = canvas.getBoundingClientRect();
-  var root = document.documentElement;
-  mouseX = evt.clientX - rect.left - root.scrollLeft;
-  mouseY = evt.clientY - rect.top - root.scrollTop;
-  paddleX = mouseX - PADDLE_WIDTH/2;
-}
-
 function updateAll(){
   move();
   draw();
 }
 
-function brickReset(){
-	for(var i=0; i < BRICK_COLS; i++){
-		brickGrid[i] = true;
-	}// end of brick count
-}// end of brickReset
 
-/*canvas move*/
 function move(){
   ballX += ballSpeedX;
   ballY += ballSpeedY;
@@ -115,8 +114,8 @@ function move(){
 function resetBall(){
   var delay=500;
   setTimeout(function() {
-	ballX = 100;
-	ballY = 100;
+	ballX = 200;
+	ballY = 200;
   }, delay);
 }
 
@@ -126,6 +125,24 @@ function reflectBall(reflect){
   return reflectBall;
 }
 
+function rowColtoArrayIndex(col, row){
+	return col + BRICK_COLS * row;
+}	
+	
+function drawBricks(){	
+	
+ 
+	for(var eachRow=0;eachRow<BRICK_ROWS;eachRow++) {
+		for(var eachCol=0;eachCol<BRICK_COLS;eachCol++) {
+		  
+		var arrayIndex = rowColtoArrayIndex(eachCol, eachRow);
+		
+		if(brickGrid[arrayIndex]){
+			fillRect('blue',BRICK_WIDTH*eachCol,BRICK_THICKNESS*eachRow,BRICK_WIDTH-BRICK_GAP,BRICK_THICKNESS-2);
+		}
+	  }//end of Brick Count Row
+  }//end of Brick Count
+}
 
 /*canvas draw*/
 function draw(){
@@ -135,30 +152,21 @@ function draw(){
   ball("white", ballX, ballY, 10);
   /*paddle*/
   fillRect("white", paddleX, canvas.height - PADDLE_DIST_FROM_EDGE, PADDLE_WIDTH, PADDLE_THICKNESS);
-  /*mouse coordinates*/
-  var mouseBrickRow = mouseX / BRICK_WIDTH;
-  var mouseBrickCol = mouseY / BRICK_THICKNESS;
-	
-  colorText(mouseBrickRow+","+mouseBrickCol, mouseX, mouseY, "yellow","11px Verdana");
+  
   /*Bricks*/
+  
   drawBricks();
-
+	
+  /*mouse coordinates*/
+  var mouseBrickCol = Math.floor(mouseX / BRICK_WIDTH);	
+  var mouseBrickRow = Math.floor(mouseY / BRICK_THICKNESS);
+	
+  var brickIndexUnderMouse = rowColtoArrayIndex(mouseBrickCol, mouseBrickRow);
+  colorText(mouseBrickCol+","+mouseBrickRow+": "+brickIndexUnderMouse, mouseX, mouseY);
 }
 
-function drawBricks(){	
-  for (var eachCol = 0; eachCol <= BRICK_COLS; eachCol++){
-	  for(var eachRow = 0; eachRow <= BRICK_ROWS; eachRow++){
-		if(brickGrid[eachCol] == true){
-			fillRect('blue',BRICK_WIDTH*eachCol,BRICK_THICKNESS*eachRow,BRICK_WIDTH-BRICK_GAP,BRICK_THICKNESS-2);
-		}
-	  }//end of Brick Count Row
-  }//end of Brick Count
-}
 
-function padding(colorPadding, topLeftX, topLeftY, paddingW, paddingH){
-  canvasContext.fillStyle = colorPadding;
-  canvasContext.fillRect(topLeftX, topLeftY, paddingW, paddingH);
-}
+
 
 function fillRect(colorCanvas, topLeftX, topLeftY, canvasWidth, canvasHeight){
   canvasContext.fillStyle = colorCanvas;
@@ -172,9 +180,9 @@ function ball(colorBall, centerX, centerY, radius){
   canvasContext.fill();
 }
 
-function colorText(textContent, textX, textY, colorContent, fontText){
-  canvasContext.font = fontText;
-  canvasContext.fillStyle = colorContent;
+function colorText(textContent, textX, textY, colorContent){
+  canvasContext.font = "11px Verdana";
+  canvasContext.fillStyle = "yellow";
   canvasContext.fillText(textContent, textX, textY);
 }
 
